src/snapshots/digisurf__app__tests__arrow_keys_right_twice_then_left_once.snap
---
source: src/app.rs
expression: terminal.backend()
---
"                  460   480    500   520   540    560   580    600   620   640  "
"                                                                                "
"┌Signals───────┐⡖⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⢲               ⢰⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⢲                "
"│clock         │⠃              ⠘⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠚               ⠘⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒"
"│              │                     ⢰⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⢲                      "
"│data          │⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠚                   ⠘⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒"
"│              │⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⢲                                "
"│enable        │                               ⠘⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒"
"│              │                                                                "
"│              │                                                                "
"│              │                                                                "
"│              │                                                                "
"│              │                                                                "
"│              │                                                                "
"│              │                                                                "
"│              │                                                                "
"└──────────────┘                                                                "
"Normal──────────────────────────────────────────────────────────────────────────"
" ':' for command mode. :q, then <Enter> to quit. :h then <Enter> for help.      "
"                                                                                "
