src/snapshots/digisurf__app__tests__help_menu_no_scroll.snap
---
source: src/app.rs
expression: terminal.backend()
---
"     ┌Help [Scroll with Up/Down]──────────────────────────────────────────┐     "
"     │DigiSurf Keyboard Controls                                          │     "
"     │                                                                    │     "
"     │Navigation:                                                         │     "
"     │Up/Down - Select signal                                             │     "
"     │Up+Shift/Down+Shift - Move signal up/down                           │     "
"     │Left/Right - Navigate timeline                                      │     "
"     │'+' - Zoom in                                                       │     "
"     │'-' - Zoom out                                                      │     "
"     │'0' - Zoom full                                                     │     "
"     │':' - Enter command mode                                            │     "
"     │                                                                    │     "
"     │Markers:                                                            │     "
"     │Left Click - Place yellow marker (primary)                          │     "
"     │Shift+Left Click - Place white marker (secondary)                   │     "
"     │Delete - Remove primary marker                                      │     "
"     │Backspace - Remove secondary marker                                 │     "
"     │                                                                    │     "
"     │Selection:                                                          │     "
"     └────────────────────────────────────────────────────────────────────┘     "
