src/snapshots/digisurf__app__tests__help_menu_with_scroll.snap
---
source: src/app.rs
expression: terminal.backend()
---
"     ┌Help [Scroll with Up/Down]──────────────────────────────────────────┐     "
"     │                                                                    │     "
"     │Markers:                                                            │     "
"     │Left Click - Place yellow marker (primary)                          │     "
"     │Shift+Left Click - Place white marker (secondary)                   │     "
"     │Delete - Remove primary marker                                      │     "
"     │Backspace - Remove secondary marker                                 │     "
"     │                                                                    │     "
"     │Selection:                                                          │     "
"     │Click and Drag - Zoom to selection                                  │     "
"     │                                                                    │     "
"     │Commands:                                                           │     "
"     │:zoom <factor> - Zoom to 1/factor of total                          │     "
"     │:zoomfull (:zf) - Zoom to full view                                 │     "
"     │:goto <time> - Go to specific time                                  │     "
"     │:marker <1|2> <time> - Set marker                                   │     "
"     │:q - Quit digisurf                                                  │     "
"     │:help (:h) - Show this help                                         │     "
"     │                                                                    │     "
"     └────────────────────────────────────────────────────────────────────┘     "
