src/snapshots/digisurf__app__tests__render_app.snap
---
source: src/app.rs
expression: terminal.backend()
---
"┌──────────────────────────────────────────────────────────────────────────────┐"
"│DigiSurf | Time: 0 to 50 of 100                                               │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌Signals───────┐⢲ ⢰⢲⢰⢲ ⢰⢲⢰⠒⢲⢰⢲⢰⠒⢲⢰⢲⢰⠒⢲⢰⢲ ⢰⢲⢰⢲ ⢰⢲⢰⠒⢲⢰⢲⢰⠒⢲⢰⢲ ⢰⢲⢰⢲ ⢰⢲⢰⢲ ⢰⢲⢰⠒⢲⢰⢲⢰⠒⢲ "
"│clk           │⠘⠒⠚⠘⠚⠘⠒⠚⠘⠚ ⠘⠚⠘⠚ ⠘⠚⠘⠚ ⠘⠚⠘⠒⠚⠘⠚⠘⠒⠚⠘⠚ ⠘⠚⠘⠚ ⠘⠚⠘⠒⠚⠘⠚⠘⠒⠚⠘⠚⠘⠒⠚⠘⠚ ⠘⠚⠘⠚ ⠘⠒"
"│              │⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⢲                                                   "
"│reset         │            ⠘⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒"
"│              │⢲           ⢰⢲           ⢰⢲          ⢰⠒⢲          ⢰⢲            "
"│data_valid    │⠘⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠚⠘⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠚⠘⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠚ ⠘⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠚⠘⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒"
"│              │⣶⣀⣰⣰⣰⣰⣀⣰⣰⣰⣀⣰⣰⣰⣰⣀⣰⣰⣰⣰⣀⣰⣰⣰⣀⣰⣰⣰⣰⣀⣰⣰⣰⣀⣰⣰⣰⣰⣀⣰⣰⣰⣀⣰⣰⣰⣰⣀⣰⣰⣰⣰⣀⣰⣰⣰⣀⣰⣰⣰⣰⣀⣰⣀"
"│data          │⠛ ⠘⠘⠘⠘ ⠘⠘⠘ ⠘⠘⠘⠘ ⠘⠘⠘⠘ ⠘⠘⠘ ⠘⠘⠘⠘ ⠘⠘⠘ ⠘⠘⠘⠘ ⠘⠘⠘ ⠘⠘⠘⠘ ⠘⠘⠘⠘ ⠘⠘⠘ ⠘⠘⠘⠘ ⠘ "
"│              │⣰⠒⠒⢲⣰⠒⠒⢲⣰⠒⠒⢲⣰⠒⢲⣀⣰⠒⢲⣰⠒⠒⢲⣰⠒⠒⢲⣰⠒⠒⢲⣰⠒⠒⢲⣰⠒⢲⣀⣰⠒⢲⣀⣰⠒⢲⣰⠒⠒⢲⣰⠒⠒⢲⣰⠒⠒⢲⣰⠒⢲⣀⣰⠒"
"│tristate      │                                                                "
"│              │⣀    ⢀⣀⣀    ⢀⣀    ⢀⣀     ⢀⣀    ⢀⣀    ⢀⣀⣀    ⢀⣀    ⢀⣀     ⢀⣀     "
"│undefined     │⠘⠒⠒⠒⠒⠚ ⠘⠒⠒⠒⠒⠚⠘⠒⠒⠒⠒⠚⠘⠒⠒⠒⠒⠒⠚⠘⠒⠒⠒⠒⠚⠘⠒⠒⠒⠒⠚ ⠘⠒⠒⠒⠒⠚⠘⠒⠒⠒⠒⠚⠘⠒⠒⠒⠒⠒⠚⠘⠒⠒⠒⠒⠒"
"│              │                                                                "
"│              │                                                                "
"│              │                                                                "
"│              │                                                                "
"└──────────────┘                                                                "
