src/snapshots/digisurf__app__tests__render_app_in_command_mode.snap
---
source: src/app.rs
expression: terminal.backend()
---
"┌──────────────────────────────────────────────────────────────────────────────┐"
"│DigiSurf | Time: 0 to 50 of 0                                                 │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌Signals───────┐                                                                "
"│              │                                                                "
"│              │                                                                "
"│              │                                                                "
"│              │                                                                "
"│              │                                                                "
"│              │                                                                "
"│              │                                                                "
"│              │                                                                "
"│              │                                                                "
"│              │                                                                "
"│              │                                                                "
"│              │                                                                "
"└──────────────┘                                                                "
"Command─────────────────────────────────────────────────────────────────────────"
":goto 50                                                                        "
"                                                                                "
